# projeto-ml

./: README.md  app.py  pyproject.toml  run.sh  testes.ipynb
