[tool.poetry]
name = "projeto-ml"
version = "0.1.0"
description = ""
authors = ["Ingrid Vitória <ingridguimaraes597@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.1"
scikit-learn = "^1.7.0"
streamlit = "^1.47.0"
matplotlib = "^3.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
